arquivos-yml/app-v2.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: giropops-v2
specs:
  replicas: 10
  strategy: 
    type: RollingUpdate
    rolligUpdate:
      maxSurge: 2
      maxUnavailable: 3
  template:
    metadata: 
      labels:
        app: giropops 
        version: "2.0.0"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "32111"
  spec: 
    containers: 
    - name: giropops
      image: linuxtips/nginx-prometheus-exporter:2.0.0
      livenessProbe:
        httpGet:
          path: /
          port: 80
          scheme: HTTP 
      readinessProbe:
        httpGet:
          path: /
          port: 80
          scheme: HTTP  
      ports: 
      - containerPort: 80
      - containerPort: 32111
