arquivos-yml/app2.yml
apiVersion: extension/v1beta1
kind: Deployment
metadata:
  name: app2
spec: 
  replicas: 2
  template:
    metadata:
      labels:
        app: app2 
    spec: 
      containers:
      - name: app2 
        image: dockersamples/static-site
        ports: 
        - containerPort: 80
