arquivos-yml/config-map2.yml
apiVersion: v1 
kind: Pod 
metadata: 
  name: busybox-configmap
  namespace: default 
spec: 
  containers: 
  - image: busybox 
    name: busy-configmap
    command:
      - sleep
      - "3600"
