arquivos-yml/default-backend.yml
apiVersion: extension/v1beta1
kind: Deployment
metadata:
  name: default-backend
spec: 
  replicas: 2
  template:
    metadata: 
      labels: 
        app: default-backend
    spec: 
      terminationGracePeriodSeconds: 60 
      containers:
      - name: default-backend
        image: gcr.io/google_containers/defaultbackend:1.0
        livenessProbe: 
          httpGet: 
            path: /healthz 
            port: 8080
            scheme: HTTP 
          initialDelaySeconds: 30
          timeoutSeconds: 5
        ports: 
        - containerPort: 8080
        resources: 
          limitis:
            cpu: 10m 
            memory: 20Mi 
          requests: 
            cpu: 10m 
            memory: 20Mi
