arquivos-yml/deployment-limitado.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels:
    app: nginx-tosko
  name: nginx-tosko
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nginx-tosko 
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      createTimestamp: null
      labels: 
        app: nginx-tosko 
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx 
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
            #cpu: 0.2
          requests: 
            memory: "128Mi"
            cpu: "50m"        
            #cpu: 0.05
        terminationMessagePath: /dev/termination-log
        teminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always 
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
