arquivos-yml/initcontainer.yml
apiVersion: v1 
kind: Pod
metadata: 
  name: init-demo
spec: 
  containers: 
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
    volumeMounts:
    - name: workDir
      mountPath: /usr/share/nginx/html
  dnsPolicy: Default 
  volumes: 
  - name: workdir 
  emptyDir: {}
