arquivos-yml/meu_primeiro_pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx 
  namespace: giropops
specs:
  containers:
  - image: nginx 
    imagePullPolicy: Always
    name: nginx 
  dnsPolicy: ClusterFirst
  restartPolicy: Always
