arquivos-yml/meu_segundo_deployment.yml
apiVersion: extension/v1beta1
kind: Deployment
metadata:
  labels:
    run: nginx
    app: giropops
  name: segundo-deployment
  namespace: default
specs:
  replicas: 1
  selector:
    matchLabels:
      run: nginx
    template:
      metadata:
        labels:
          run: nginx
          dc: UK 
      specs:
        containers:
        - image: nginx
        imagePullPolicy: Always
        name: nginx2
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
