arquivos-yml/nfs-pv.yml
apiVersion: extension/v1beta1
kind: Deployment
metadata:
  labels:
    run: nginx
  name: nginx 
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector: 
    matchLabels: 
      run: nginx 
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: nginx 
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        volumeMounts:
        - name: nfs-pv
          mountPath: /giropops 
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: file 
      volumes: 
      - name: nfs-pv 
        PersistentVolumeClaim: 
          claimName: primeiro-pvc 
        dnsPolicy: ClusterFirst
        restartPolicy: Always 
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
