arquivos-yml/pod-config-map-file.yml
apiVersion: v1 
kind: Pod 
metadata: 
  name: busybox-configmap
  namespace: default 
spec: 
  containers: 
  - image: busybox 
    name: busy-configmap
    command:
      - sleep
      - "3600" 
    volumeMounts:
    - name: meu-configmap-vol
      mountPath: /etc/frutas
  volumes: 
  - name: meu-configmap-vol 
    configMap: 
      name: cores-frutas
