arquivos-yml/pod-emptydir.yml
apiVersion: v1
kind: Pod
metadata: 
  name: busybox
  namespace: default
spec:
  containers:
  - image: busybox 
    name: busy 
    command: 
      - sleep
      - "3600"
    volumeMounts: 
    - mountPath: /giropops
      name: giropops-dir
  volumes: 
  - name: giropops-dir
    emptyDir: {}
