arquivos-yml/pod-limitado.yml
apiVersion: v1
kind: Pod
metadata: 
  name: limit-pod
spec:
  containers:
  - name: meu-container
    image: nginx
