arquivos-yml/pod-secret-env.yml
apiVersion: v1 
kind: Pod 
metadata:
  name: teste-secret-env
  namespace: default
spec: 
  containers: 
  - image: busybox
    name: busy-secret-env
    command:
      - sleep
      - "3600"
