arquivos-yml/pod-secret.yml
apiVersion: v1 
kind: Pod 
metadata:
  name: teste-secret
  namespace: default
spec: 
  containers: 
  - image: busybox
    name: busy
    command:
      - sleep
      - "3600"
    volumeMounts:
    - mountPath: /tmp/giropops
      name: my-volume-secret
  volumes: 
  - name: my-volume-secret
    secret: 
      secretName: my-secret
