arquivos-yml/primeiro_daemonset.yml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: daemon-set-primeiro
specs:
  template:
    metadata:
      labels:
        system: Strigus
    specs:
      containers:
      - name: nginx
      image: nginx:1.7.9
      ports:
      - containerPort: 80
  updateStrategy:
    type: RollingUpate
