arquivos-yml/meu_primeiro_svc_clusterip.yml
apiVersion: v1
kind: Service
metadata: 
  labels:
    run: nginx
  name: nginx-clusterip
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx 
  type: ClusterIP
