arquivos-yml/meu_primeiro_svc_loadbalancer.yml
apiVersion: v1
kind: Service
metadata: 
  labels:
    run: nginx
  name: nginx-loadbalancer
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31222
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx 
  sessionAffinity: None 
  type: LoadBalancer
