arquivos-yml/meu_primeiro_svc_nodeport.yml
apiVersion: v1
kind: Service
metadata: 
  labels:
    run: nginx
  name: nginx-nodeport
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31111
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx 
  sessionAffinity: None 
  type: NodePort
