arquivos-yml/app-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress 
metadata: 
  annotations:
    nginx.ingress.kubernets.io/rewrite-target: /
  name: app-ingress
spec: 
  rules: 
  - host: XXXXXXX
    htpp:
      paths:
      - backend:
          serviceName: appsvc1
          servicePort: 80
        path: /app1
      - backend:
          serviceName: appsvc2
          servicePort: 80
        path: /app2
